--- a/TestFrameworkCore/TestFrameworkCore.csproj
+++ b/TestFrameworkCore/TestFrameworkCore.csproj
@@ -17,13 +17,13 @@
     <PackageReference Include="SpecFlow" Version="3.0.225" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
     <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Base\" />
     <Folder Include="Config\" />
     <Folder Include="Extensions\" />
-    <Folder Include="Utils\Logger\" />
     <Folder Include="Utils\Reporter\" />
   </ItemGroup>
 
