Added new feature file ContactUs and its related page objects and steps

--- a/WebTestsCore/WebTestConfig.json
+++ b/WebTestsCore/WebTestConfig.json
@@ -3,6 +3,7 @@
   "Regression": {
     "browser": "Chrome",
     "applicationUnderTest": "https://www.officeworks.com.au/",
+    "searchEngineUrl": "https://www.google.com.au/",
     "logTarget": "Log4Net",
     "reportTarget": "Extent",
     "testLogFileLocation": "TestLogs",
