Test Case steps fully added

--- a/WebTestsCore/WebTestConfig.json
+++ b/WebTestsCore/WebTestConfig.json
@@ -11,6 +11,7 @@
     "testDataLocation": "Resources\\TestData",
     "webDriverLocation": "Resources\\WebDrivers",
     "projectName": "SeleniumExecrise",
-    "screenShotLocation": "Screenshots"
+    "screenShotLocation": "Screenshots",
+    "pageTimeOut": 10000
   }
 }
